Fix SVG on IE9-11

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,6 @@
 }
 
 
-
 a {
   font-family: "Exo 2", sans-serif;
 }
@@ -157,6 +156,26 @@ h6 {
   }
 }
 
-.form-modal{
+.form-modal {
   width: 95%;
+}
+
+
+/*
+ * Let's target IE to respect aspect ratios and sizes for img tags containing SVG files
+ *
+ * [1] IE9
+ * [2] IE10+
+ */
+/* 1 */
+.ie9 img[src$=".svg"] {
+  width: 100%;
+}
+
+/* 2 */
+@media screen and (-ms-high-contrast: active),
+(-ms-high-contrast: none) {
+  img[src$=".svg"] {
+    width: 100%;
+  }
 }
